--- a/pages/message-details.html
+++ b/pages/message-details.html
@@ -43,19 +43,19 @@
                 <h4><span class="pull-right l-text-error">异常</span>仪表信息</h4>
                 <p class="l-text-gray">故障灯亮，仪表盘没有显示</p>
                 <div class="l-img-list l-flex-wrap">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
                 </div>
               </li>
               <li class="l-border-t">
                 <h4><span class="pull-right l-text-error">异常</span>仪表信息</h4>
                 <p class="l-text-gray">故障灯亮，仪表盘没有显示</p>
                 <div class="l-img-list l-flex-wrap">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
-                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
+                  <img src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=180x140&w=180&h=140">
                 </div>
               </li>
             </ul>
