--- a/pages/message.html
+++ b/pages/message.html
@@ -47,7 +47,7 @@
       <div class="content" style="background-color: #fff;">
         <div class="l-panel-carinfo l-bg-cover" style="background-image: url('../static/images/img-001.jpg')">
           <div class="l-flex-hc l-margin">
-            <img class="l-thumb l-margin-r-sm" src="http://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=Logo&w=64&h=64">
+            <img class="l-thumb l-margin-r-sm" src="http://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=Logo&w=64&h=64">
             <h3>奥迪A6L 2001款</h3>
           </div>
           <div class="l-flex-h l-margin">
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <div class="l-center l-margin-t  l-fs-l">
+        <div class="l-text-center l-margin-t  l-fs-l">
           <i class="l-icon">&#xe602;</i>
           <strong>检测报告</strong>
         </div>
