--- a/pages/shopcar.html
+++ b/pages/shopcar.html
@@ -33,7 +33,7 @@
           <i class="l-icon l-icon-radio"></i>
           <span>全选</span>
         </label>
-        <div class="l-rest l-center">
+        <div class="l-rest l-text-center">
           合计：<span class="l-text-warn"><i class="l-icon">&#xe6cb;</i>200.00</span>
         </div>
         <a v-if="!isEdit" class="button button-fill l-btn" href="shopcar-order.html">去结算</a>
@@ -71,7 +71,7 @@
               <input type="checkbox" :checked="checkAll">
               <i class="l-icon l-icon-radio"></i>
             </label>
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest">
               <h4 class="l-text-clamp">商品名称商品名称商</h4>
               <div class="l-shopcar-item-disc">
@@ -92,7 +92,7 @@
               <input type="checkbox" :checked="checkAll">
               <i class="l-icon l-icon-radio"></i>
             </label>
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest">
               <h4 class="l-text-clamp">商品名称商品名称商</h4>
               <div class="l-shopcar-item-disc">
