--- a/pages/store-list.html
+++ b/pages/store-list.html
@@ -35,7 +35,7 @@
         </div>
         <div class="l-store-item l-margin-b">
           <a class="l-store-item-bd l-flex-h" href="store-details.html">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <span class="pull-right l-fs-s l-text-gray"><i class="l-icon">&#xe634;</i>3.8km</span>
@@ -60,7 +60,7 @@
         <!-- 列表 -->
         <div class="l-store-item l-margin-b">
           <a class="l-store-item-bd l-flex-h" href="store-details.html">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <span class="pull-right l-fs-s l-text-gray"><i class="l-icon">&#xe634;</i>3.8km</span>
@@ -80,7 +80,7 @@
         </div>
         <div class="l-store-item l-margin-b">
           <a class="l-store-item-bd l-flex-h" href="store-details.html">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <span class="pull-right l-fs-s l-text-gray"><i class="l-icon">&#xe634;</i>3.8km</span>
@@ -100,7 +100,7 @@
         </div>
         <div class="l-store-item l-margin-b">
           <a class="l-store-item-bd l-flex-h" href="store-details.html">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <span class="pull-right l-fs-s l-text-gray"><i class="l-icon">&#xe634;</i>3.8km</span>
