--- a/pages/shopcar-order.html
+++ b/pages/shopcar-order.html
@@ -31,18 +31,18 @@
         <div class="l-rest l-margin-l">
           订单金额：<span class="l-text-warn"><i class="l-icon">&#xe6cb;</i>210.00</span>
         </div>
-        <a class="button button-fill l-btn">&ensp;创建订单&ensp;</a>
+        <a class="button button-fill l-btn" href="shopcar-order-pay.html">&ensp;创建订单&ensp;</a>
       </footer>
       <!-- 这里是页面内容区 -->
       <div class="content">
         <!-- 购买的商品 -->
         <div class="l-flex-h l-shopcar-order-list">
           <div>
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
           </div>
           <div class="l-rest l-text-right">
             <a class="button l-inline">查看</a>
@@ -81,7 +81,7 @@
         </div>
         <div class="l-store-item l-margin-b">
           <a class="l-store-item-bd l-flex-h" href="store-details.html">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <span class="pull-right l-fs-s l-text-gray"><i class="l-icon">&#xe634;</i>3.8km</span>
