--- a/pages/user-goods-pay.html
+++ b/pages/user-goods-pay.html
@@ -68,7 +68,7 @@
           </div>
           <!-- 列表 -->
           <div class="l-user-good-bd l-flex-h l-border-t">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=100x100&w=100&h=100">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=100x100&w=100&h=100">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
@@ -80,7 +80,7 @@
             </div>
           </div>
           <div class="l-user-good-bd l-flex-h l-border-t">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=100x100&w=100&h=100">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=100x100&w=100&h=100">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="l-user-good-bd l-flex-h l-border-t">
-            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=100x100&w=100&h=100">
+            <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=16&bg=0894ec&txtclr=fff&txt=100x100&w=100&h=100">
             <div class="l-rest l-flex-v">
               <div class="l-rest">
                 <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
@@ -112,7 +112,7 @@
           </div>
           <div class="l-store-item l-margin-b">
             <a class="l-store-item-bd l-flex-h" href="store-details.html">
-              <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=ebebeb&txtclr=999&txt=120x120&w=120&h=120">
+              <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=120x120&w=120&h=120">
               <div class="l-rest l-flex-v">
                 <div class="l-rest">
                   <span class="pull-right l-fs-s l-text-gray"><i class="l-icon">&#xe634;</i>3.8km</span>
