--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
     <div class="page disable-router">
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
-        <a class="icon icon-left pull-left open-panel"></a>
+        <a class="icon icon-refresh pull-right"></a>
         <h1 class="title">首页</h1>
       </header>
       <!-- 工具栏 -->
@@ -87,20 +87,20 @@
         <!-- 车辆信息 end-->
 
         <div class="l-flex-h l-bg">
-          <div class="l-rest l-padding l-border-r">
+          <a class="l-rest l-padding l-border-r l-text-default" href="coupons.html">
             <div class="l-text-right">
               <img style="width: 6.75rem;" src="../static/images/img-011.jpg">
             </div>
             <h3 style="margin-top: -1.0rem;">优惠中心</h3>
             <p class="l-fs-s l-text-gray">优惠搭配，价低质优</p>
-          </div>
-          <div class="l-rest l-padding l-border-r">
+          </a>
+          <a class="l-rest l-padding l-text-default" href="shop.html">
             <div class="l-text-right">
               <img style="width: 6.75rem;" src="../static/images/img-012.jpg">
             </div>
             <h3 style="margin-top: -1.0rem;">套餐年卡</h3>
             <p class="l-fs-s l-text-gray">优惠套餐，智能匹配</p>
-          </div>
+          </a>
         </div>
         <div class="l-flex-hc l-padding l-bg l-border-t l-margin-b">
           <div class="l-rest l-margin-l">
