--- a/pages/store-details.html
+++ b/pages/store-details.html
@@ -31,13 +31,13 @@
         <div class="swiper-container" data-space-between='10'>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="https://placeholdit.imgix.net/~text?txtsize=32&bg=ccc&txtclr=ebebeb&txt=720x300&w=720&h=300" alt="">
+              <img src="https://placeholdit.imgix.net/~text?txtsize=32&bg=0894ec&txtclr=fff&txt=720x300&w=720&h=300" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="https://placeholdit.imgix.net/~text?txtsize=32&bg=ccc&txtclr=ebebeb&txt=720x300&w=720&h=300" alt="">
+              <img src="https://placeholdit.imgix.net/~text?txtsize=32&bg=0894ec&txtclr=fff&txt=720x300&w=720&h=300" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="https://placeholdit.imgix.net/~text?txtsize=32&bg=ccc&txtclr=ebebeb&txt=720x300&w=720&h=300" alt="">
+              <img src="https://placeholdit.imgix.net/~text?txtsize=32&bg=0894ec&txtclr=fff&txt=720x300&w=720&h=300" alt="">
             </div>
           </div>
           <div class="swiper-pagination"></div>
