--- a/pages/user-goods.html
+++ b/pages/user-goods.html
@@ -44,7 +44,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -59,7 +62,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -74,7 +80,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -89,7 +98,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -107,7 +119,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -126,7 +141,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -145,7 +163,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
@@ -164,7 +185,10 @@
                   <div class="l-rest">
                     <h4 class="l-text-clamp">地方了发动机里看到寄过来的空间隔离开关的广泛的了感觉到了地方了发动机里看到寄过来的空间隔离开关的</h4>
                   </div>
-                  <p><span class="pull-right">x1</span><i class="l-icon">&#xe6cb;</i>200.00</p>
+                  <p>
+                    <span class="pull-right">x1</span>
+                    <span class="l-text-warn"><i class="l-icon"></i>200.00</span>
+                  </p>
                 </div>
               </a>
               <div class="l-user-good-ft l-flex-hc l-border-t">
