--- a/pages/index.html
+++ b/pages/index.html
@@ -94,7 +94,7 @@
             <h3 style="margin-top: -1.0rem;">优惠中心</h3>
             <p class="l-fs-s l-text-gray">优惠搭配，价低质优</p>
           </a>
-          <a class="l-rest l-padding l-text-default" href="shop.html">
+          <a class="l-rest l-padding l-text-default" href="shop-taocan.html">
             <div class="l-text-right">
               <img style="width: 6.75rem;" src="../static/images/img-012.jpg">
             </div>
@@ -102,7 +102,7 @@
             <p class="l-fs-s l-text-gray">优惠套餐，智能匹配</p>
           </a>
         </div>
-        <div class="l-flex-hc l-padding l-bg l-border-t l-margin-b">
+        <a class="l-flex-hc l-padding l-bg l-border-t l-margin-b l-text-default" href="shop.html">
           <div class="l-rest l-margin-l">
             <h3>特惠商城</h3>
             <p class="l-fs-s l-text-gray">全网最低价汽车配件</p>
@@ -110,7 +110,7 @@
           <div class="l-rest l-text-center">
             <img style="width: 6.75rem;" src="../static/images/img-013.jpg">  
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
