--- a/pages/message-details.html
+++ b/pages/message-details.html
@@ -109,7 +109,7 @@
         </div>
         <!-- 建议项目 end-->
         <div class="l-margin">
-          <a class="button button-fill l-btn" href="message-details-all.html">查看全部检测项目</a>
+          <a class="button l-btn l-bg" href="message-details-all.html">查看全部检测项目</a>
         </div>
       </div>
     </div>
