--- a/pages/message.html
+++ b/pages/message.html
@@ -95,7 +95,7 @@
           </ul>
         </div>
         <div class="l-margin">
-          <a href="message-details.html" class="button button-fill l-btn">查看明细</a>
+          <a href="message-details.html" class="button l-btn">查看明细</a>
         </div>
       </div>
     </div>
