--- a/pages/shop-taocan.html
+++ b/pages/shop-taocan.html
@@ -23,24 +23,13 @@
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
         <a class="icon icon-refresh pull-right"></a>
-        <h1 class="title">轮胎专场</h1>
+        <h1 class="title">超值套餐</h1>
       </header>
-      <!-- 二级标题栏 -->
-      <div class="bar bar-header-secondary l-bg">
-        <div class="l-flex-hc l-padding-tb-s l-text-center l-text-gray">
-          <span class="l-rest">综合</span>
-          <span class="l-rest">销量</span>
-          <span class="l-rest">新品</span>
-          <span class="l-rest">综合</span>
-          <span class="l-rest">价格<i class="l-icon">&#xe609;</i></span>
-          <span class="l-rest">筛选<i class="l-icon">&#xe61b;</i></span>
-        </div>
-      </div>
       <!-- 这里是页面内容区 -->
       <div class="content">
         <div class="l-shop-goods-list">
           <div class="row">
-            <a v-for="item in 8" class="col-50 l-shop-goods-item l-text-default" href="shop-goods-details.html">
+            <a v-for="item in 8" class="col-50 l-shop-goods-item l-text-default" href="shop-taocan-details.html">
               <img class="l-thumb" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0894ec&txtclr=fff&txt=%E7%BC%A9%E7%95%A5%E5%9B%BE&w=344&h=344">
               <div class="l-padding-sm">
                 <h4 class="l-text-clamp">[年度大促销] 汽车保养大套餐都放到打飞机的咖啡机</h4>
