--- a/pages/car-info.html
+++ b/pages/car-info.html
@@ -51,7 +51,7 @@
               </div>
             </li>
             <li>
-              <div class="item-content l-allow-null">
+              <div class="item-content">
                 <div class="item-inner">
                   <div class="item-title label">车牌号码</div>
                   <div class="l-car-prefix">粤A</div>
@@ -87,7 +87,7 @@
                 <div class="item-inner">
                   <div class="item-title label">发动机号</div>
                   <div class="item-input">
-                    <input type="tel" placeholder="请填写">
+                    <input type="text" placeholder="请填写">
                   </div>
                 </div>
               </div>
@@ -97,7 +97,7 @@
                 <div class="item-inner">
                   <div class="item-title label">车架号</div>
                   <div class="item-input">
-                    <input type="tel" placeholder="请填写">
+                    <input type="text" placeholder="请填写">
                   </div>
                 </div>
               </div>
